--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"svelte": "index.js",
 	"types": "index.d.ts",
+	"type": "module",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -21,39 +22,39 @@
 		"package"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.17.5",
-		"@storybook/addon-actions": "^6.4.19",
-		"@storybook/addon-essentials": "^6.4.19",
-		"@storybook/addon-links": "^6.4.19",
+		"@babel/core": "^7.17.10",
+		"@storybook/addon-actions": "^6.4.22",
+		"@storybook/addon-essentials": "^6.4.22",
+		"@storybook/addon-links": "^6.4.22",
 		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/addon-svelte-csf": "^1.1.0",
-		"@storybook/addon-viewport": "^6.4.19",
-		"@storybook/svelte": "^6.4.19",
+		"@storybook/addon-svelte-csf": "^1.1.2",
+		"@storybook/addon-viewport": "^6.4.22",
+		"@storybook/svelte": "^6.4.22",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"autoprefixer": "^10.4.2",
-		"babel-loader": "^8.2.3",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+		"@tailwindcss/line-clamp": "^0.3.1",
+		"@tsconfig/svelte": "^2.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.22.0",
+		"@typescript-eslint/parser": "^5.22.0",
+		"autoprefixer": "^10.4.7",
+		"babel-loader": "^8.2.5",
 		"cssnano": "^5.1.7",
 		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"postcss": "^8.4.7",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^3.4.1",
+		"postcss": "^8.4.13",
 		"postcss-cli": "^9.1.0",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.48.0",
+		"svelte2tsx": "^0.5.9",
+		"svelte-check": "^2.7.0",
 		"svelte-loader": "^3.1.2",
-		"svelte-preprocess": "^4.10.1",
-		"tailwindcss": "^3.0.23",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"@tailwindcss/line-clamp": "^0.3.1",
-		"svelte2tsx": "^0.5.5"
+		"svelte-preprocess": "^4.10.6",
+		"tailwindcss": "^3.0.24",
+		"tslib": "^2.4.0",
+		"typescript": "^4.6.4",
+		"vite": "^2.9.8"
 	}
 }
