--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "@njinga/asha",
-	"version": "0.0.1",
+	"name": "@njingabv/asha",
+	"version": "0.0.12",
 	"main": "index.js",
 	"svelte": "index.js",
-	"types": "index.d.ts",
+	"types": "lib/index.d.ts",
 	"type": "module",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"package": "svelte-kit package && NODE_ENV=production ostcss src/app.css -o dist/components.css",
+		"package": "svelte-kit package && NODE_ENV=production postcss src/app.css -o package/asha.css",
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
@@ -16,45 +16,45 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"build-storybook": "build-storybook",
+		"publish": "npm publish"
 	},
-	"files": [
-		"package"
-	],
+	"exports": {
+		"./asha.css": "./asha.css"
+	},
 	"devDependencies": {
-		"@babel/core": "^7.17.10",
-		"@storybook/addon-actions": "^6.4.22",
-		"@storybook/addon-essentials": "^6.4.22",
-		"@storybook/addon-links": "^6.4.22",
+		"@babel/core": "^7.18.6",
+		"@storybook/addon-actions": "^6.5.9",
+		"@storybook/addon-essentials": "^6.5.9",
+		"@storybook/addon-links": "^6.5.9",
 		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/addon-svelte-csf": "^1.1.2",
-		"@storybook/addon-viewport": "^6.4.22",
-		"@storybook/svelte": "^6.4.22",
+		"@storybook/addon-svelte-csf": "^2.0.5",
+		"@storybook/addon-viewport": "^6.5.9",
+		"@storybook/svelte": "^6.5.9",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-		"@tailwindcss/line-clamp": "^0.3.1",
-		"@tsconfig/svelte": "^2.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.22.0",
-		"@typescript-eslint/parser": "^5.22.0",
+		"@tailwindcss/line-clamp": "^0.4.0",
+		"@tsconfig/svelte": "^3.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.5",
+		"@typescript-eslint/parser": "^5.30.5",
 		"autoprefixer": "^10.4.7",
 		"babel-loader": "^8.2.5",
-		"cssnano": "^5.1.7",
-		"eslint": "^7.32.0",
+		"cssnano": "^5.1.12",
+		"eslint": "^8.19.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^3.4.1",
-		"postcss": "^8.4.13",
-		"postcss-cli": "^9.1.0",
-		"prettier": "^2.6.2",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.14",
+		"postcss-cli": "^10.0.0",
+		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte2tsx": "^0.5.9",
-		"svelte-check": "^2.7.0",
-		"svelte-loader": "^3.1.2",
-		"svelte-preprocess": "^4.10.6",
-		"tailwindcss": "^3.0.24",
+		"svelte": "^3.49.0",
+		"svelte2tsx": "^0.5.11",
+		"svelte-check": "^2.8.0",
+		"svelte-loader": "^3.1.3",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.0",
-		"typescript": "^4.6.4",
-		"vite": "^2.9.8"
+		"typescript": "^4.7.4"
 	}
 }
