refactor: :art: change folder organisation

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "@njingabv/asha",
-	"version": "0.0.12",
+	"version": "0.0.13",
 	"main": "index.js",
 	"svelte": "index.js",
 	"types": "lib/index.d.ts",
 	"type": "module",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"package": "svelte-kit package && NODE_ENV=production postcss src/app.css -o package/asha.css",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,7 +33,7 @@
 		"@storybook/svelte": "^6.5.9",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@tsconfig/svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
