--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@njingabv/asha",
-	"version": "0.0.13",
+	"version": "0.0.15",
 	"main": "index.js",
 	"svelte": "index.js",
 	"types": "lib/index.d.ts",
@@ -10,7 +10,6 @@
 		"build": "vite build",
 		"package": "svelte-kit package && NODE_ENV=production postcss src/app.css -o package/asha.css",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -23,38 +22,39 @@
 		"./asha.css": "./asha.css"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.18.6",
-		"@storybook/addon-actions": "^6.5.9",
-		"@storybook/addon-essentials": "^6.5.9",
-		"@storybook/addon-links": "^6.5.9",
+		"@babel/core": "^7.19.3",
+		"@storybook/addon-actions": "^6.5.12",
+		"@storybook/addon-essentials": "^6.5.12",
+		"@storybook/addon-links": "^6.5.12",
 		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/addon-svelte-csf": "^2.0.5",
-		"@storybook/addon-viewport": "^6.5.9",
-		"@storybook/svelte": "^6.5.9",
+		"@storybook/addon-svelte-csf": "^2.0.8",
+		"@storybook/addon-viewport": "^6.5.12",
+		"@storybook/svelte": "^6.5.12",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
-		"@tailwindcss/line-clamp": "^0.4.0",
+		"@sveltejs/vite-plugin-svelte": "^1.0.9",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tsconfig/svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.30.5",
-		"@typescript-eslint/parser": "^5.30.5",
-		"autoprefixer": "^10.4.7",
+		"@typescript-eslint/eslint-plugin": "^5.40.0",
+		"@typescript-eslint/parser": "^5.40.0",
+		"autoprefixer": "^10.4.12",
 		"babel-loader": "^8.2.5",
 		"cssnano": "^5.1.12",
-		"eslint": "^8.19.0",
+		"eslint": "^8.25.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.14",
 		"postcss-cli": "^10.0.0",
 		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.49.0",
-		"svelte2tsx": "^0.5.11",
-		"svelte-check": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.0",
+		"svelte": "^3.51.0",
+		"svelte-check": "^2.9.2",
 		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.7",
+		"svelte2tsx": "^0.5.20",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.0",
-		"typescript": "^4.7.4"
+		"typescript": "^4.8.4",
+		"vite": "^3.1.8"
 	}
 }
