--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 engine-strict=true
 @NjingaBV:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
