--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
 	"name": "@njingabv/asha",
-	"version": "0.0.15",
+	"version": "0.0.19",
 	"main": "index.js",
 	"svelte": "index.js",
 	"types": "lib/index.d.ts",
 	"type": "module",
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/NjingaBV/asha.git"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-kit package && NODE_ENV=production postcss src/app.css -o package/asha.css",
+		"package": "svelte-package && NODE_ENV=production postcss src/app.css -o package/asha.css",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -22,37 +29,38 @@
 		"./asha.css": "./asha.css"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.19.3",
-		"@storybook/addon-actions": "^6.5.12",
-		"@storybook/addon-essentials": "^6.5.12",
-		"@storybook/addon-links": "^6.5.12",
+		"@babel/core": "^7.19.6",
+		"@storybook/addon-actions": "^6.5.13",
+		"@storybook/addon-essentials": "^6.5.13",
+		"@storybook/addon-links": "^6.5.13",
 		"@storybook/addon-postcss": "^2.0.0",
 		"@storybook/addon-svelte-csf": "^2.0.8",
-		"@storybook/addon-viewport": "^6.5.12",
-		"@storybook/svelte": "^6.5.12",
+		"@storybook/addon-viewport": "^6.5.13",
+		"@storybook/svelte": "^6.5.13",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@sveltejs/package": "1.0.0-next.5",
 		"@sveltejs/vite-plugin-svelte": "^1.0.9",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tsconfig/svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.40.0",
-		"@typescript-eslint/parser": "^5.40.0",
+		"@typescript-eslint/eslint-plugin": "^5.41.0",
+		"@typescript-eslint/parser": "^5.41.0",
 		"autoprefixer": "^10.4.12",
 		"babel-loader": "^8.2.5",
-		"cssnano": "^5.1.12",
-		"eslint": "^8.25.0",
+		"cssnano": "^5.1.13",
+		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.18",
 		"postcss-cli": "^10.0.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.8.0",
-		"svelte": "^3.51.0",
+		"svelte": "^3.52.0",
 		"svelte-check": "^2.9.2",
 		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.7",
 		"svelte2tsx": "^0.5.20",
-		"tailwindcss": "^3.1.5",
+		"tailwindcss": "^3.2.1",
 		"tslib": "^2.4.0",
 		"typescript": "^4.8.4",
 		"vite": "^3.1.8"
