--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: PROD
     steps:
       - uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
