--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
           version: 7.17.1
       - run: pnpm i
       - run: pnpm package
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
       - run: cd package
       - run: npm publish
         env:
