--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
 		"@storybook/addon-svelte-csf": "^2.0.10",
 		"@storybook/addon-viewport": "^6.5.13",
 		"@storybook/svelte": "^6.5.13",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@sveltejs/package": "1.0.0-next.6",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
+		"@sveltejs/package": "^1.0.1",
 		"@sveltejs/vite-plugin-svelte": "^1.0.9",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tsconfig/svelte": "^3.0.0",
