--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -21,17 +21,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out source
-      uses: actions/checkout@v2
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2.2.4
+    - uses: actions/setup-node@v3
       with:
-        node-version: '16'
-        cache: 'npm'
+        node-version: '16.x'
+        cache: pnpm
+    - run: pnpm install --frozen-lockfile
+    - run: pnpm lint
+    - run: pnpm check
 
     - name: Install npm packages
-      run: npm ci
+      run: pnpm ci
 
     - name: Setup Git
       run: |
