--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,25 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 7.17.1
-      - run: pnpm i
+      - run: pnpm install
+      - name: Creating .npmrc
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            engine-strict=true
+            @NjingaBV:registry=https://npm.pkg.github.com
+            //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          EOF
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
       - run: pnpm package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-      - run: npm publish
-        working-directory: ./package
+      - name: Create Release Pull Request or Publish to npm
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          working-directory: ./package
+          publish: pnpm release
         env:
+          GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
