--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
 	},
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"package": "svelte-package && NODE_ENV=production postcss src/app.css -o package/asha.css",
-		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"build": "svelte-kit sync && svelte-package && NODE_ENV=production postcss src/app.css -o package/asha.css",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
 		"release": "changeset publish",
@@ -38,41 +37,42 @@
 		"./asha.css": "./asha.css"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.20.5",
+		"@babel/core": "^7.20.7",
 		"@changesets/cli": "^2.26.0",
-		"@storybook/addon-actions": "^6.5.13",
-		"@storybook/addon-essentials": "^6.5.13",
-		"@storybook/addon-links": "^6.5.13",
+		"@storybook/addon-actions": "^6.5.15",
+		"@storybook/addon-essentials": "^6.5.15",
+		"@storybook/addon-links": "^6.5.15",
 		"@storybook/addon-postcss": "^2.0.0",
 		"@storybook/addon-svelte-csf": "^2.0.10",
-		"@storybook/addon-viewport": "^6.5.13",
-		"@storybook/svelte": "^6.5.13",
+		"@storybook/addon-viewport": "^6.5.15",
+		"@storybook/svelte": "^6.5.15",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.1",
 		"@sveltejs/package": "^1.0.1",
-		"@sveltejs/vite-plugin-svelte": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tsconfig/svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"@typescript-eslint/parser": "^5.47.1",
 		"autoprefixer": "^10.4.13",
 		"babel-loader": "^9.1.0",
 		"cssnano": "^5.1.14",
-		"eslint": "^8.28.0",
+		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.19",
+		"postcss": "^8.4.20",
 		"postcss-cli": "^10.1.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^3.0.0",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^3.0.1",
 		"svelte-loader": "^3.1.4",
 		"svelte-preprocess": "^5.0.0",
 		"svelte2tsx": "^0.6.0",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"typescript": "^4.9.4",
+		"vite": "^4.0.3",
+		"vitest": "^0.26.2"
 	}
 }
