--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Publish to GitHub Packages
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+    - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
