--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
         tags:
             - 'v*'
 jobs:
-    build:
+    publish:
         runs-on: ubuntu-latest
         environment: PROD
         steps:
@@ -29,12 +29,14 @@ jobs:
             - run: pnpm package
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-            - name: Create Release Pull Request or Publish to npm
-              id: changesets
-              uses: changesets/action@v1
-              with:
-                  working-directory: ./package
-                  publish: pnpm release
+    create-github-release:
+        name: Create GitHub Release
+        runs-on: ubuntu-latest
+        needs: publish
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
+            - name: Create Release
+              run: gh release create ${{ github.ref }} --generate-notes
               env:
-                  GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
-                  NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
