--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Publish to GitHub Packages
 on:
-    push:
-        tags:
-            - 'v*'
+  workflow_run:
+    workflows: ["Bump version"]
+    types:
+      - completed
 jobs:
     publish:
         runs-on: ubuntu-latest
