--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,11 @@ jobs:
               with:
                   version: 7.17.1
             - run: pnpm install
-            - run: pnpm package
+            - run: pnpm build
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+            - run: npm publish
+              working-directory: ./package
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
     create-github-release:
