ci(release process): change bump version processus and update release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: Publish to GitHub Packages
 on:
-    workflow_run:
-        workflows: ['Bump version']
-        types:
-            - completed
+    push:
+        tags:
+            - 'v*'
 jobs:
     publish:
         runs-on: ubuntu-latest
