--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"packageManager": "pnpm@7.26.0",
 	"engines": {
-		"pnpm": "^7.0.0"
+		"pnpm": "^7.25.0"
 	},
 	"scripts": {
 		"dev": "vite dev",
@@ -32,6 +32,10 @@
 		"release": "changeset publish",
 		"publish": "npm publish"
 	},
+    "pre-commit": [
+        "format",
+        "test:unit"
+    ],
 	"exports": {
 		"./asha.css": "./asha.css"
 	},
@@ -60,6 +64,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.20",
 		"postcss-cli": "^10.1.0",
+		"pre-commit": "^1.2.2",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.55.0",
