--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
 		"typescript": "^4.9.4",
 		"vite": "^4.0.3",
 		"vitest": "^0.28.0"
+	},
+	"dependencies": {
+		"@types/youtube": "^0.0.47"
 	}
 }
