chore: add GITHUB_TOKEN to push tags

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -45,4 +45,4 @@ jobs:
             - name: Push latest version
               run: git push origin main --follow-tags
               env:
-                  GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
