--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -42,4 +42,4 @@ jobs:
             - name: bump version
               run: npm version ${{ github.event.inputs.version }}
             - name: Push latest version
-              run: git push --tags
+              run: git push origin develop --follow-tags
