--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -41,5 +41,17 @@ jobs:
                   git config user.email 'guyghost@gmail.com'
             - name: bump version
               run: npm version ${{ github.event.inputs.version }}
-            - name: Push latest version
-              run: git push origin develop --follow-tags
+            - name: Push the tag
+              run: git push --tag
+
+    create-github-release:
+        name: Create GitHub Release
+        runs-on: ubuntu-latest
+        needs: bump-version
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
+            - name: Create Release
+              run: gh release create ${{ github.event.inputs.version }} --generate-notes
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
