--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,8 +1,8 @@
 name: Publish to GitHub Packages
 on:
-    push:
-        tags:
-            - 'v*'
+    release:
+        types: [created]
+
 jobs:
     publish:
         runs-on: ubuntu-latest
@@ -24,14 +24,3 @@ jobs:
               working-directory: ./package
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-    create-github-release:
-        name: Create GitHub Release
-        runs-on: ubuntu-latest
-        needs: publish
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
-            - name: Create Release
-              run: gh release create ${{ github.ref }} --generate-notes
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
