--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,35 +16,49 @@ on:
                     - major
 
 jobs:
-    bump-version:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Check out source
-              uses: actions/checkout@v2
-              with:
-                  ssh-key: ${{ secrets.DEPLOY_KEY }}
-            - uses: actions/checkout@v2
-            - uses: pnpm/action-setup@v2.2.4
-            - uses: actions/setup-node@v2.4.2
-              with:
-                  node-version: '16.x'
-                  cache: pnpm
-            - run: pnpm install --frozen-lockfile
-            - run: pnpm lint
-            - run: pnpm check
+  tag-and-release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Set up Node.js and pnpm
+        uses: pnpm/setup-pnpm@v1
+        with:
+          node-version: '16.x'
 
-            - name: Setup Git
-              run: |
-                  git config user.name 'Guy MANDINA'
-                  git config user.email 'guyghost@gmail.com'
-            - name: bump version
-              run: npm version ${{ github.event.inputs.version }}
-            - name: Push the tag
-              run: git push --follow-tags
-            - name: Get the latest tag
-              run: git describe --tags --abbrev=0
-              id: latest_tag
-            - name: Create Release
-              run: gh release create v${{ steps.latest_tag.outputs.stdout }} --generate-notes
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint code
+        run: pnpm lint
+
+      - name: Check code
+        run: pnpm check
+      - name: Set up Git
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+
+      - name: Bump version in package.json
+        id: bump_version
+        run: |
+          current_version=$(node -p -e "require('./package.json').version")
+          new_version=$(pnpm version ${{ github.event.inputs.version }})
+          echo "::set-output name=version::${new_version//v/}"
+
+      - name: Create tag and push it
+        id: create_tag
+        run: |
+          tag=v${{ steps.bump_version.outputs.version }}
+          git tag $tag
+          git push origin $tag
+
+      - name: Create release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create v${{ steps.bump_version.outputs.version }} \
+            --generate-notes \
+            --title "Release v${{ steps.bump_version.outputs.version }}" \
+            --target main
