--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -47,11 +47,12 @@ jobs:
               id: bump_version
               run: |
                   npm version ${{ github.event.inputs.version }}
+                  echo "VERSION=${{ env.npm_package_version }}" >> $GITHUB_ENV
 
             - name: Create tag and push it
               id: create_tag
               run: |
-                  tag=${{ steps.bump_version.outputs.version }}
+                  tag=${{ env.VERSION }}
                   git tag $tag
                   git push origin $tag
 
@@ -59,7 +60,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  gh release create ${{ steps.bump_version.outputs.version }} \
+                  gh release create ${{ env.VERSION }} \
                     --generate-notes \
-                    --title "Release ${{ steps.bump_version.outputs.version }}" \
+                    --title "Release ${{ env.VERSION }}" \
                     --target main
