ci: fix workflow

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,7 +16,7 @@ on:
                     - major
 
 jobs:
-    tag-and-release:
+    bump-version:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout source
