--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
 		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tsconfig/svelte": "^4.0.0",
+        "@types/youtube": "^0.0.47",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
+        "@xstate/svelte": "^2.0.1",
 		"autoprefixer": "^10.4.13",
 		"babel-loader": "^9.1.0",
 		"cssnano": "^6.0.0",
@@ -77,9 +79,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.0.3",
-		"vitest": "^0.32.0"
-	},
-	"dependencies": {
-		"@types/youtube": "^0.0.47"
+		"vitest": "^0.32.0",
+        "xstate": "^4.37.1"
 	}
 }
