--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
 		"release": "changeset publish",
 		"publish": "npm publish"
 	},
@@ -37,13 +37,15 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.7",
-		"@storybook/addon-actions": "^7.0.0",
-		"@storybook/addon-essentials": "^7.0.0",
-		"@storybook/addon-links": "^7.0.0",
+		"@storybook/addon-actions": "^7.0.6",
+		"@storybook/addon-essentials": "^7.0.6",
+		"@storybook/addon-links": "^7.0.6",
+		"@storybook/addon-mdx-gfm": "^7.0.6",
 		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/addon-svelte-csf": "^3.0.0",
-		"@storybook/addon-viewport": "^7.0.0",
-		"@storybook/svelte": "^7.0.0",
+		"@storybook/addon-svelte-csf": "^3.0.2",
+		"@storybook/addon-viewport": "^7.0.6",
+		"@storybook/svelte": "^7.0.6",
+		"@storybook/sveltekit": "^7.0.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.0.1",
 		"@sveltejs/package": "^2.0.0",
@@ -57,11 +59,15 @@
 		"cssnano": "^6.0.0",
 		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-storybook": "^0.6.11",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.20",
 		"postcss-cli": "^10.1.0",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"storybook": "^7.0.6",
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.1",
 		"svelte-loader": "^3.1.4",
