--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@typescript-eslint/parser": "^5.47.1",
 		"@xstate/cli": "^0.4.2",
 		"@xstate/svelte": "^2.0.1",
+		"@xstate/test": "^0.5.1",
 		"autoprefixer": "^10.4.13",
 		"babel-loader": "^9.1.0",
 		"cssnano": "^6.0.0",
