--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
 	"name": "@njingabv/asha",
 	"version": "0.0.42",
-	"main": "index.js",
-	"svelte": "index.js",
-	"types": "lib/index.d.ts",
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"type": "module",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com"
@@ -21,7 +20,10 @@
 	},
 	"scripts": {
 		"dev": "vite dev",
-		"build": "svelte-kit sync && svelte-package && NODE_ENV=production postcss src/app.css -o package/asha.css",
+		"build": "svelte-kit sync && pnpm package",
+		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && NODE_ENV=production postcss src/app.css -o dist/asha.css && publint",
+		"prepublishOnly": "pnpm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
@@ -34,7 +36,18 @@
 		"postinstall": "xstate typegen \"./src/**/*.ts?(x)\""
 	},
 	"exports": {
-		"./asha.css": "./asha.css"
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"peerDependencies": {
+		"svelte": "^3.55.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.7",
@@ -70,6 +83,7 @@
 		"postcss-cli": "^10.1.0",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
+		"publint": "^0.1.9",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"storybook": "^7.0.6",
@@ -80,7 +94,7 @@
 		"svelte2tsx": "^0.6.0",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.0.2",
 		"vite": "^4.0.3",
 		"vitest": "^0.32.0",
 		"xstate": "^4.37.2"
