--- a/.github/workflows/create-release-and-tag.yml
+++ b/.github/workflows/create-release-and-tag.yml
@@ -36,7 +36,7 @@ jobs:
               run: pnpm install --frozen-lockfile
 
             - name: Run Semantic Release
-              run: npx semantic-release
+              run: npx semantic-release --branches main
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
