--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@njingabv/asha",
-	"version": "0.0.44",
+	"version": "0.0.45",
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
@@ -32,8 +32,7 @@
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
 		"release": "changeset publish",
-		"publish": "npm publish",
-		"postinstall": "xstate typegen \"./src/**/*.ts?(x)\""
+		"publish": "npm publish"
 	},
 	"exports": {
 		".": {
