--- a/package.json
+++ b/package.json
@@ -38,16 +38,12 @@
 		"!dist/**/*.test.*",
 		"!dist/**/*.spec.*"
 	],
-	"peerDependencies": {
-		"svelte": "^3.55.0"
-	},
 	"devDependencies": {
 		"@babel/core": "^7.22.10",
 		"@storybook/addon-actions": "^7.3.2",
 		"@storybook/addon-essentials": "^7.3.2",
 		"@storybook/addon-links": "^7.3.2",
-		"@storybook/addon-mdx-gfm": "^7.3.2",
-		"@storybook/addon-postcss": "^2.0.0",
+		"@storybook/addon-styling": "^1.3.6",
 		"@storybook/addon-svelte-csf": "^3.0.7",
 		"@storybook/addon-viewport": "^7.3.2",
 		"@storybook/svelte": "^7.3.2",
