feat: update dependencies and update storybook stories

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
 	"bugs": {
 		"url": "https://github.com/NjingaBV/asha/issues"
 	},
-	"packageManager": "pnpm@8.6.12",
+	"packageManager": "pnpm@9.1.4",
 	"engines": {
-		"pnpm": "^8.0.0"
+		"pnpm": "^9.1.4"
 	},
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "deno run -A --unstable npm:vite dev",
 		"build": "svelte-kit sync && pnpm package",
 		"build:watch": "svelte-kit sync && pnpm package --watch",
 		"preview": "vite preview",
@@ -40,52 +40,54 @@
 		"!dist/**/*.spec.*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.22.10",
-		"@storybook/addon-actions": "^7.3.2",
-		"@storybook/addon-essentials": "^7.3.2",
-		"@storybook/addon-links": "^7.3.2",
-		"@storybook/addon-styling": "^1.3.6",
-		"@storybook/addon-svelte-csf": "^3.0.7",
-		"@storybook/addon-viewport": "^7.3.2",
-		"@storybook/svelte": "^7.3.2",
-		"@storybook/sveltekit": "^7.3.2",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.6",
-		"@sveltejs/package": "^2.2.1",
-		"@sveltejs/vite-plugin-svelte": "^2.4.5",
+		"@babel/core": "^7.24.7",
+		"@chromatic-com/storybook": "^1.5.0",
+		"@storybook/addon-actions": "^8.1.9",
+		"@storybook/addon-essentials": "^8.1.9",
+		"@storybook/addon-links": "^8.1.9",
+		"@storybook/addon-styling": "^1.3.7",
+		"@storybook/addon-svelte-csf": "^4.1.3",
+		"@storybook/addon-viewport": "^8.1.9",
+		"@storybook/svelte": "^8.1.9",
+		"@storybook/sveltekit": "^8.1.9",
+		"@sveltejs/adapter-auto": "^3.2.1",
+		"@sveltejs/kit": "^2.5.10",
+		"@sveltejs/package": "^2.3.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tsconfig/svelte": "^5.0.0",
-		"@types/youtube": "^0.0.47",
-		"@typescript-eslint/eslint-plugin": "^6.4.0",
-		"@typescript-eslint/parser": "^6.4.0",
-		"@xstate/cli": "^0.4.2",
-		"@xstate/svelte": "^2.1.0",
+		"@tsconfig/svelte": "^5.0.4",
+		"@types/youtube": "^0.0.50",
+		"@typescript-eslint/eslint-plugin": "^7.13.0",
+		"@typescript-eslint/parser": "^7.13.0",
+		"@xstate/cli": "^0.5.17",
+		"@xstate/svelte": "^3.0.3",
 		"@xstate/test": "^0.5.1",
-		"autoprefixer": "^10.4.15",
+		"autoprefixer": "^10.4.19",
 		"babel-loader": "^9.1.3",
-		"cssnano": "^6.0.1",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-storybook": "^0.6.13",
+		"cssnano": "^7.0.2",
+		"eslint": "^9.4.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-storybook": "^0.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.28",
-		"postcss-cli": "^10.1.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"publint": "^0.2.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"storybook": "^7.3.2",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.0",
-		"svelte-loader": "^3.1.9",
-		"svelte-preprocess": "^5.0.4",
-		"svelte2tsx": "^0.6.20",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.2",
-		"xstate": "^4.38.2"
+		"postcss": "^8.4.38",
+		"postcss-cli": "^11.0.0",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.4",
+		"publint": "^0.2.8",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"storybook": "^8.1.9",
+		"svelte": "^5.0.0-next.165",
+		"svelte-adapter-deno": "^0.9.0",
+		"svelte-check": "^3.8.2",
+		"svelte-loader": "^3.2.3",
+		"svelte-preprocess": "^6.0.1",
+		"svelte2tsx": "^0.7.9",
+		"tailwindcss": "^3.4.4",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.2",
+		"vite": "^5.3.1",
+		"vitest": "^1.6.0",
+		"xstate": "^5.14.0"
 	}
 }
