--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["svelte.svelte-vscode"]
+	"recommendations": ["svelte.svelte-vscode", "denoland.vscode-deno", "bradlc.vscode-tailwindcss"]
 }
