--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-	"recommendations": ["svelte.svelte-vscode", "denoland.vscode-deno", "bradlc.vscode-tailwindcss"]
+  "recommendations": [
+    "svelte.svelte-vscode",
+    "denoland.vscode-deno",
+    "bradlc.vscode-tailwindcss"
+  ]
 }
