Refactor Svelte components and update PostCSS configuration
- Updated PostCSS configuration to use '@tailwindcss/postcss' plugin.
- Fixed self-closing tags in Svelte components (PathLine, Youtube, Blob, Hero, Tile, HeroTile).
- Corrected a typo in the Blob component's style attribute.
- Cleaned up the Svelte config by removing unnecessary PostCSS plugin imports.

--- a/package.json
+++ b/package.json
@@ -40,52 +40,52 @@
 		"!dist/**/*.spec.*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.22.10",
-		"@storybook/addon-actions": "^7.3.2",
-		"@storybook/addon-essentials": "^7.3.2",
-		"@storybook/addon-links": "^7.3.2",
-		"@storybook/addon-styling": "^1.3.6",
-		"@storybook/addon-svelte-csf": "^3.0.7",
-		"@storybook/addon-viewport": "^7.3.2",
-		"@storybook/svelte": "^7.3.2",
-		"@storybook/sveltekit": "^7.3.2",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.6",
-		"@sveltejs/package": "^2.2.1",
-		"@sveltejs/vite-plugin-svelte": "^2.4.5",
+		"@babel/core": "^7.28.3",
+		"@storybook/addon-actions": "^9.0.8",
+		"@storybook/addon-docs": "^9.1.4",
+		"@storybook/addon-links": "^9.1.4",
+		"@storybook/addon-svelte-csf": "^5.0.8",
+		"@storybook/addon-viewport": "^9.0.8",
+		"@storybook/svelte": "^9.1.4",
+		"@storybook/sveltekit": "^9.1.4",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/kit": "^2.37.0",
+		"@sveltejs/package": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.4",
 		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tsconfig/svelte": "^5.0.0",
-		"@types/youtube": "^0.0.47",
-		"@typescript-eslint/eslint-plugin": "^6.4.0",
-		"@typescript-eslint/parser": "^6.4.0",
-		"@xstate/cli": "^0.4.2",
-		"@xstate/svelte": "^2.1.0",
+		"@tailwindcss/postcss": "^4.1.12",
+		"@tsconfig/svelte": "^5.0.5",
+		"@types/youtube": "^0.1.2",
+		"@typescript-eslint/eslint-plugin": "^8.42.0",
+		"@typescript-eslint/parser": "^8.42.0",
+		"@xstate/cli": "^0.5.17",
+		"@xstate/svelte": "^5.0.0",
 		"@xstate/test": "^0.5.1",
-		"autoprefixer": "^10.4.15",
-		"babel-loader": "^9.1.3",
-		"cssnano": "^6.0.1",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-storybook": "^0.6.13",
+		"autoprefixer": "^10.4.21",
+		"babel-loader": "^10.0.0",
+		"cssnano": "^7.1.1",
+		"eslint": "^9.34.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-storybook": "^9.1.4",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.28",
-		"postcss-cli": "^10.1.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"publint": "^0.2.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"storybook": "^7.3.2",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.0",
-		"svelte-loader": "^3.1.9",
-		"svelte-preprocess": "^5.0.4",
-		"svelte2tsx": "^0.6.20",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.2",
-		"xstate": "^4.38.2"
+		"postcss": "^8.5.6",
+		"postcss-cli": "^11.0.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"publint": "^0.3.12",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"storybook": "^9.1.4",
+		"svelte": "^5.38.6",
+		"svelte-check": "^4.3.1",
+		"svelte-loader": "^3.2.4",
+		"svelte-preprocess": "^6.0.3",
+		"svelte2tsx": "^0.7.42",
+		"tailwindcss": "^4.1.12",
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.4",
+		"vitest": "^3.2.4",
+		"xstate": "^5.21.0"
 	}
 }
