--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.28.3",
-		"@storybook/addon-actions": "^9.0.8",
-		"@storybook/addon-docs": "^9.1.4",
-		"@storybook/addon-links": "^9.1.4",
+    "@storybook/addon-docs": "^9.1.4",
 		"@storybook/addon-svelte-csf": "^5.0.8",
 		"@storybook/addon-viewport": "^9.0.8",
 		"@storybook/svelte": "^9.1.4",
@@ -59,8 +57,8 @@
 		"@typescript-eslint/eslint-plugin": "^8.42.0",
 		"@typescript-eslint/parser": "^8.42.0",
 		"@xstate/cli": "^0.5.17",
-		"@xstate/svelte": "^5.0.0",
-		"@xstate/test": "^0.5.1",
+    "@xstate/graph": "^3.0.4",
+    "@xstate/svelte": "^5.0.0",
 		"autoprefixer": "^10.4.21",
 		"babel-loader": "^10.0.0",
 		"cssnano": "^7.1.1",
