--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
 		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-storybook": "^9.1.4",
+		"eslint-plugin-svelte": "^3.12.1",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"globals": "^16.3.0",
 		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
 		"prettier": "^3.6.2",
@@ -76,12 +78,14 @@
 		"storybook": "^9.1.4",
 		"svelte": "^5.38.6",
 		"svelte-check": "^4.3.1",
+		"svelte-eslint-parser": "^1.3.1",
 		"svelte-loader": "^3.2.4",
 		"svelte-preprocess": "^6.0.3",
 		"svelte2tsx": "^0.7.42",
 		"tailwindcss": "^4.1.12",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.42.0",
 		"vite": "^7.1.4",
 		"vitest": "^3.2.4",
 		"xstate": "^5.21.0"
