--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 engine-strict=true
 @NjingaBV:registry=https://npm.pkg.github.com
-//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
