--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"release": "changeset publish"
+		"release": "semantic-release"
 	},
 	"files": [
 		"dist",
@@ -41,6 +41,12 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.28.3",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/commit-analyzer": "^13.0.1",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^11.0.5",
+		"@semantic-release/npm": "^12.0.2",
+		"@semantic-release/release-notes-generator": "^14.0.3",
 		"@storybook/addon-docs": "^9.1.4",
 		"@storybook/addon-svelte-csf": "^5.0.8",
 		"@storybook/addon-viewport": "^9.0.8",
@@ -61,6 +67,7 @@
 		"@xstate/svelte": "^5.0.0",
 		"autoprefixer": "^10.4.21",
 		"babel-loader": "^10.0.0",
+		"conventional-changelog-conventionalcommits": "^9.1.0",
 		"cssnano": "^7.1.1",
 		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -75,6 +82,7 @@
 		"publint": "^0.3.12",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"semantic-release": "^24.2.7",
 		"storybook": "^9.1.4",
 		"svelte": "^5.38.6",
 		"svelte-check": "^4.3.1",
