--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -8,6 +8,7 @@ on:
 permissions:
     pages: write
     id-token: write
+    contents: read
 
 concurrency:
     group: 'pages'
@@ -16,6 +17,8 @@ concurrency:
 jobs:
     build:
         runs-on: ubuntu-latest
+        env:
+            NODE_OPTIONS: --max-old-space-size=4096
         steps:
             - name: Checkout
               uses: actions/checkout@v4
