--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,7 +5,7 @@
 		["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
 		["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
 		["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
-		["@semantic-release/npm", { "pkgRoot": "." }],
+		["@semantic-release/npm", { "pkgRoot": ".", "npmPublish": false }],
 		["@semantic-release/github", { "assets": [] }],
 		[
 			"@semantic-release/git",
