--- a/.github/workflows/create-release-and-tag.yml
+++ b/.github/workflows/create-release-and-tag.yml
@@ -1,50 +1,40 @@
 name: Create Release and Tag
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    create_release:
-        runs-on: ubuntu-latest
-        environment: PROD
+  create_release:
+    runs-on: ubuntu-latest
+    environment: PROD
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'pnpm'
+          registry-url: https://npm.pkg.github.com
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8.6.12
+      - name: Configure 1Password Service Account
+        if: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN != '' }}
+        uses: 1password/load-secrets-action/configure@v1
+        with:
+          service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+      - name: Load secret
+        if: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN != '' }}
+        uses: 1password/load-secrets-action@v1
+        env:
+          AUTH_TOKEN: op://IT/GitHub/CREDENTIALS/personal_token
+      - run: pnpm install --frozen-lockfile
+      - name: Run Semantic Release
+        run: pnpm exec semantic-release --branches main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: lts/*
-                  cache: 'pnpm'
-                  registry-url: 'https://npm.pkg.github.com'
-
-            - name: Enable corepack and set pnpm version
-              run: |
-                  corepack enable
-                  corepack prepare pnpm@8.6.12 --activate
-
-            - name: Configure 1Password Service Account
-              if: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN != '' }}
-              uses: 1password/load-secrets-action/configure@v1
-              with:
-                  service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-
-            - name: Load secret
-              if: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN != '' }}
-              uses: 1password/load-secrets-action@v1
-              env:
-                  AUTH_TOKEN: op://IT/GitHub/CREDENTIALS/personal_token
-
-            - name: Install dependencies
-              run: pnpm install --frozen-lockfile
-
-            - name: Run Semantic Release
-              run: pnpm exec semantic-release --branches main
-              env:
-                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
